# rtFIN-NL

./: .gitignore  Cargo.toml  README.md  build.rs
HK_INSURANCE/: fin_job.sh  hkfire_serve_122335.err  hkfire_serve_122335.out  job.sh  revised_job.sh
KORAIL_MAINTENANCE/: .readme.md.swp
KORAIL_MAINTENANCE/vllm021/: docker-compose.yml  fp8_compose.sh
KORAIL_MAINTENANCE/vllm021/download_code/: gemma31_dl_124698.err  gemma31_dl_124698.out  sbatch.sh
KORAIL_MAINTENANCE/vllm021/logs/: krl_upgrd_fp8_124856.err  krl_upgrd_fp8_124856.out  krl_upgrd_fp8_124858.err  krl_upgrd_fp8_124858.out  krl_upgrd_fp8_124859.err  krl_upgrd_fp8_124859.out  krl_upgrd_fp8_124861.err  krl_upgrd_fp8_124861.out
proto/: search.proto
rtFIN_ISL_ML/embedding_tuning/: train_embedding.py
rtFIN_ISL_ML/embedding_tuning/h100_slurm/: README.md  benchmark_korean_embeddings.py  env.example  job.sh  requirement.txt  sbatch_h100_train.sh  submit_examples.sh  summarize_results.py
rtFIN_ISL_ML/embedding_tuning/h100_slurm/wandb/: latest-run
rtFIN_ISL_ML/embedding_tuning/wandb/: latest-run
rtFIN_ISL_ML/embedding_tuning/wandb/run-20260506_014233-nhviidfd/: run-nhviidfd.wandb
rtFIN_ISL_ML/embedding_tuning/wandb/run-20260506_020114-kp8yr61q/: run-kp8yr61q.wandb
rtFIN_ISL_ML/embedding_tuning/wandb/run-20260506_021338-wnqoug7m/: run-wnqoug7m.wandb
rtFIN_ISL_ML/embedding_tuning/wandb/run-20260506_114135-wj34a1d6/: run-wj34a1d6.wandb
rtFIN_ISL_ML/embedding_tuning/wandb/run-20260506_114403-wipx6ghm/: run-wipx6ghm.wandb
src/: client.rs  embedding.rs  lib.rs  main.rs  pb.rs  search.rs
(+37 files in other folders)
