[package]
name    = "Heungguk-poc-rag"
version = "0.0.1"
edition = "2021"
build   = "build.rs"  

[lib]
name = "heungguk_poc_rag"     
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
tonic         = "0.9.2"
prost          = "0.11.9"
prost-types    = "0.11.9"
prost-build    = "0.11.9"
anyhow = "1.0"
tracing = "0.1"
clap             = { version = "4", features = ["derive","cargo"] }
ndarray     = "0.15"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tracing-subscriber = "0.3"
milvus-sdk-rust = "0.1.0"
pyo3 = { version = "0.18.3", features = ["abi3-py39", "auto-initialize"] }

[build-dependencies]
tonic-build      = "0.9.2"     
prost-build      = "0.11.9" 

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"


